# curso-rust

./: .gitignore  Cargo.toml  README.md
.foam/templates/: atividade.md  aula.md  conceito.md  projeto.md  resumo-diario.md
aulas/: aula-01.rs
docs/: README.md
docs/aulas/aula-01/: README.md
docs/aulas/aula-02/: README.md  aula-02-atividade-01.md
docs/aulas/aula-03/: README.md  aula-03-atividade-01.md  aula-03-atividade-02.md  aula-03-atividade-03.md  aula-03-atividade-04.md
docs/aulas/aula-04/: README.md  aula-04-atividade-01.md  aula-04-atividade-02.md  aula-04-atividade-03.md  aula-04-atividade-04.md  aula-04-atividade-05.md  aula-04-atividade-06.md  aula-04-atividade-07.md
docs/aulas/aula-05/: README.md  aula-05-atividade-01.md  aula-05-atividade-02.md  aula-05-atividade-03.md  aula-05-atividade-04.md  aula-05-atividade-05.md
docs/aulas/aula-06/: README.md  aula-06-atividade-01.md  aula-06-atividade-02.md  aula-06-atividade-03.md  aula-06-atividade-04.md  aula-06-atividade-05.md  aula-06-atividade-06.md
docs/conceitos/: iteradores-e-transformacoes.md  validacao-de-tipos-primitivos.md
docs/resumos/: calendario.md
docs/resumos/professor/: 2025-12-30.md  2025-12-31.md  2026-01-01.md  2026-01-02.md  2026-01-03.md  2026-01-04.md
src/: error.rs  main.rs
src/handlers/: tasks.rs
src/models/: task.rs
src/routes/: tasks.rs
src/validators/: mod.rs  text.rs
